# NoSignal

./: .gitignore  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  cla.yml  release.yml
crates/nosignal-backend-gnome/: Cargo.toml
crates/nosignal-backend-gnome/src/: imp.rs  lib.rs
crates/nosignal-backend-kde/: Cargo.toml
crates/nosignal-backend-kde/src/: imp.rs  lib.rs
crates/nosignal-backend-mock/: Cargo.toml
crates/nosignal-backend-mock/src/: lib.rs
crates/nosignal-backend-win/: Cargo.toml
crates/nosignal-backend-win/src/: imp.rs  lib.rs
crates/nosignal-backend-wlroots/: Cargo.toml
crates/nosignal-backend-wlroots/src/: imp.rs  lib.rs
crates/nosignal-backend-x11/: Cargo.toml
crates/nosignal-backend-x11/src/: imp.rs  lib.rs
crates/nosignal-cli/: Cargo.toml
crates/nosignal-cli/src/: client.rs  main.rs  ops.rs
crates/nosignal-core/: Cargo.toml
crates/nosignal-core/src/: backend.rs  edid.rs  error.rs  guards.rs  identity.rs  layout.rs  lib.rs  profile.rs  remembered.rs  topology.rs
crates/nosignal-ddc/: Cargo.toml
crates/nosignal-ddc/src/: lib.rs
crates/nosignal-ipc/: Cargo.toml
crates/nosignal-ipc/src/: dbus_client.rs  lib.rs  pipe_client.rs  types.rs
crates/nosignald/: Cargo.toml
crates/nosignald/src/: audio.rs  config.rs  dbus.rs  engine.rs  fullscreen.rs  hotkeys.rs  lib.rs  main.rs  mock_file.rs  paths.rs  pipe.rs  rpc.rs  select.rs  state.rs
crates/nosignald/tests/: engine.rs
docs/: SPEC.md
gui/: package-lock.json  package.json
gui/src/: app.html
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs  main.rs  tray.rs
gui/src/lib/: PendingBanner.svelte  api.ts  stores.ts
gui/src/routes/: +layout.svelte  +page.svelte
gui/src/routes/profiles/: +page.svelte
gui/src/routes/settings/: +page.svelte
packaging/: 99-nosignal-i2c.rules  README.md  io.github.shadowxcc.NoSignal.Daemon1.service  nosignal-daemon.service  nosignal.desktop  org.nosignal.Daemon1.service
