[workspace]
resolver = "2"
members = ["crates/*"]
# The Tauri shell is its own Cargo project so the core workspace builds
# without GUI system dependencies (webkit2gtk etc.).
exclude = ["gui/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
# TODO(M0): replace with the real repository URL at repo creation.
repository = "https://github.com/OWNER/nosignal"
rust-version = "1.88"

[workspace.dependencies]
# Shared dependency versions; crates opt in as they are implemented.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "signal",
    "io-util",
    "io-std",
    "net",
    "process",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
directories = "6"
zbus = { version = "5", default-features = false, features = ["tokio"] }

# Intra-workspace crates
nosignal-core = { path = "crates/nosignal-core" }
nosignal-ipc = { path = "crates/nosignal-ipc" }
nosignal-backend-mock = { path = "crates/nosignal-backend-mock" }
nosignal-backend-gnome = { path = "crates/nosignal-backend-gnome" }
nosignal-backend-kde = { path = "crates/nosignal-backend-kde" }
nosignal-backend-wlroots = { path = "crates/nosignal-backend-wlroots" }
nosignal-backend-x11 = { path = "crates/nosignal-backend-x11" }
nosignal-backend-win = { path = "crates/nosignal-backend-win" }
nosignal-ddc = { path = "crates/nosignal-ddc" }
