[package]
name = "nosignal-backend-gnome"
description = "GNOME display backend for NoSignal, via the org.gnome.Mutter.DisplayConfig DBus API."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nosignal-core = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
zbus = { workspace = true }
