[package]
name = "nosignal-backend-kde"
description = "KDE Plasma display backend for NoSignal, via KScreen."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nosignal-core = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
