[package]
name = "nosignal-backend-win"
description = "Windows display backend for NoSignal, via the CCD (Connecting and Configuring Displays) API."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
nosignal-core = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
    "Win32_UI_Shell",
]
