[package]
name = "nosignal-backend-wlroots"
description = "wlroots display backend for NoSignal, via the zwlr_output_manager_v1 Wayland protocol."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nosignal-core = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
