[package]
name = "nosignal-backend-x11"
description = "X11 display backend for NoSignal, via the RandR extension."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nosignal-core = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
x11rb = { version = "0.13", features = ["randr"] }
