[package]
name = "nosignal-cli"
description = "NoSignal command-line client."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "nosignal"
path = "src/main.rs"

[dependencies]
nosignal-core = { workspace = true }
nosignald = { path = "../nosignald" }
nosignal-ipc = { workspace = true }
nosignal-ddc = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
