[package]
name = "nosignal-core"
description = "Core types, backend trait, display identity matching, and profile schema for NoSignal."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
toml = { workspace = true }
