[package]
name = "nosignal-ddc"
description = "Opt-in DDC/CI monitor power control (VCP 0xD6) for NoSignal."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
nosignal-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
ddc-hi = "0.4"
