[package]
name = "nosignal-ipc"
description = "Shared IPC plumbing for NoSignal clients and daemon (DBus on Linux, named pipes on Windows)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
nosignal-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
tokio = { workspace = true }
