[package]
name = "nosignald"
description = "NoSignal daemon: owns display state, profiles, guards, timers, and persistence."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "nosignald"
path = "src/main.rs"

[dependencies]
nosignal-core = { workspace = true }
nosignal-backend-mock = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nosignal-backend-gnome = { workspace = true }
