[package]
name = "nosignald"
description = "NoSignal daemon: owns display state, profiles, guards, timers, and persistence."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "nosignald"
path = "src/main.rs"

[dependencies]
nosignal-core = { workspace = true }
nosignal-ipc = { workspace = true }
nosignal-backend-mock = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nosignal-backend-gnome = { workspace = true }
nosignal-backend-kde = { workspace = true }
nosignal-backend-wlroots = { workspace = true }
nosignal-backend-x11 = { workspace = true }
zbus = { workspace = true }
ashpd = { version = "0.13", default-features = false, features = ["tokio", "global_shortcuts"] }

[target.'cfg(target_os = "windows")'.dependencies]
nosignal-backend-win = { workspace = true }
windows-core = "0.62"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_UI_Shell",
]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
