[package]
name = "nosignal-gui"
version = "0.1.0"
description = "NoSignal GUI — thin Tauri client for the NoSignal daemon."
license = "AGPL-3.0-only"
edition = "2024"
rust-version = "1.88"

[lib]
# The `_lib` suffix avoids a lib/bin name conflict on Windows.
name = "nosignal_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
nosignal-core = { path = "../../crates/nosignal-core" }
nosignal-ipc = { path = "../../crates/nosignal-ipc" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
futures = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
tauri-plugin-global-shortcut = "2"
